--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,7 @@ services:
       - ./:/app
       - cargo:/usr/local/cargo
     working_dir: /app
+    ports:
+      - "3000:3000"
 volumes:
   cargo:
